# dotfiles

./: .gitignore  custom.sh  install.sh  zshrc
Oh-My-Zsh/: zsh-4.3.10-7.1.ky3.x86_64.rpm
Oh-My-Zsh/custom/: .zshrc  custom.sh
Oh-My-Zsh/install/: install.sh
Oh-My-Zsh/srcpkg/: zsh-4.3.10-9.el6.i686.rpm
ag/custom/: ag
autojump/custom/: autojump.zsh  custom.sh
autojump/install/: install.sh
autojump/srcpkg/: autojump-19-2.el6.noarch.rpm  autojump-zsh-19-2.el6.noarch.rpm
calise/srcpkg/: calise-0.4.2-20.1.x86_64.rpm
cgdb/: .gdbinit
cgdb/custom/: .gdbinit  cgdb_zh_language.sh  plist.gdb  save.py
cgdb/install/: install.sh
cgdb/srcpkg/: cgdb-0.6.7-1.el6.i686.rpm  cgdb-0.6.7-1.el6.x86_64.rpm  cgdb-0.6.8-1.el7.x86_64.rpm
cheat/custom/: custom.sh
cheat/install/: install.sh
cmake/custom/: CMakeLists.txt
cmus/custom/: custom.sh
cmus/install/: install.sh
cmus/srcpkg/: cmus-2.2.0-4.1.x86_64.rpm  cmus-2.4.1-1.el6.rf.x86_64.rpm
colordiff/custom/: custom.sh
colordiff/install/: install.sh
colordiff/srcpkg/: colordiff-1.0.13-1.el6.noarch.rpm
cscope/custom/: cscope_custom  custom.sh
cscope/install/: install.sh
cscope/srcpkg/: cscope-15.6-6.ky3.x86_64.rpm
ctags/install/: install.sh
ctags/srcpkg/: ctags-5.8-2.ky3.x86_64.rpm
enca/srcpkg/: enca-1.16-1.el6.i686.rpm  enca-1.16-1.el6.x86_64.rpm
enlightenment/install/: easy_efl.sh
expect/srcpkg/: expect-5.44.1.15-5.ky3.x86_64.rpm
flux/custom/: flux
git/: .gitconfig
root/: tmux_install.sh
spf13-vim/: .vimrc.local  install_spf13-vim.sh
tmux/: .tmux.conf
wireshark/: Wireshark.sh
(+200 files in other folders)
